--- a/package.json
+++ b/package.json
@@ -11,24 +11,17 @@
   "author": "Your Name",
   "license": "ISC",
   "dependencies": {
-    "@azure/storage-blob": "^12.28.0",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.19.0",
     "mongoose": "^8.2.1",
     "multer": "^2.0.2"
   },
-"devDependencies": {
-  "nodemon": "^3.1.0"
-},
-
-"engines": {
-  "node": "22.x"
-}
-
-
+  "devDependencies": {
+    "nodemon": "^3.1.0"
+  }
 }
